@@ -43,6 +43,10 @@ plot(s)
 s <- slice(d, 0:10 ~ .)
 print(s)
 
+# note that pct NOT NA is computed for each slice:
+d$p1[1:10] <- NA
+s <- slice(d, 10 ~ ., just.the.data=TRUE)
+print(s)
 
 ## 
 ## check sliced data
